table re arrange

--- a/lottoall.html
+++ b/lottoall.html
@@ -20,7 +20,8 @@
 
 
 <!---------------------------------------------------------------------------------------------------->
-<div id="divBase" class="divForFixedHeaderTable divHeight300">
+<div id="divBase" class="divForFixedHeaderTable">
+<div>
 <table id="tableBaseData" cellspacing=3 cellpadding=3>
 	<colgroup>
 		<col width="16%" />
@@ -63,7 +64,8 @@
 		</tr>
 	</tbody>
 </table>
-
+</div>
+<div>
 <table id="tableBaseDataReAppear" cellspacing=3 cellpadding=3>
 	<colgroup>
 		<col width="16%" />
@@ -105,7 +107,7 @@
 		</tr>
 	</tbody>
 </table>
-
+</div>
 </div><!--div id="divBase"--><!--div id="divBase"--><!--div id="divBase"-->
 <!---------------------------------------------------------------------------------------------------->
 <div id="" class="divBr"></div>
@@ -118,20 +120,24 @@
 	ACCM:<select id="sel2Game"></select>
 </div><!--div id="divSide2"--><!--div id="divSide2"-->
 <div id="divSide2Data" class="divForFixedHeaderTable">
+<div>
 <table id="tableSide2Data" cellspacing=0 cellpadding=0>
 	<thead></thead>
 	<tbody ></tbody>
 </table>
-
+</div>
+<div>
 <table id="tableSide2Freq" cellspacing=0 cellpadding=0>
 	<thead></thead>
 	<tbody></tbody>
 </table>
-
+</div>
+<div>
 <table id="tableSide2FreqSum" cellspacing=0 cellpadding=0>
 	<thead></thead>
 	<tbody></tbody>
 </table>
+</div>
 </div>
 <!---------------------------------------------------------------------------------------------------->
 <div id="" class="divBr"></div>
