--- a/lottonew.html
+++ b/lottonew.html
@@ -1,22 +1,23 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
+<!DOCTYPE html>
+<HTML lang="ko">
+
 <HEAD>
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="Expires" content="-1" />
-<meta http-equiv="Cache-Control" content="no-cache" />
-<meta http-equiv="Pragma" content="no-cache" />
-<!--meta name="viewport" content="initial-scale=1, width=device-width"/--> 
-<meta name="viewport" content="width=device-width, user-scalable=no">
-<TITLE> We all can do well </TITLE>
-<link rel="stylesheet" type="text/css" href="lottoall.css" />
-<script type="text/javascript" src="jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="lottodata.js"></script>
-<script type="text/javascript" src="lottonew.js"></script>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Expires" content="-1" />
+	<meta http-equiv="Cache-Control" content="no-cache" />
+	<meta http-equiv="Pragma" content="no-cache" />
+	<!--meta name="viewport" content="initial-scale=1, width=device-width"/--> 
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<TITLE> Between Us </TITLE>
+	<link rel="stylesheet" type="text/css" href="lottoall.css" />
+	<script type="text/javascript" src="jquery-1.11.3.min.js"></script>
+	<script type="text/javascript" src="lottodata.js"></script>
+	<script type="text/javascript" src="lottonew.js"></script>
 
 </HEAD>
 
-<BODY width="800" height="800">
+<BODY>
 
 
 <!---------------------------------------------------------------------------------------------------->
