--- a/lottoall.html
+++ b/lottoall.html
@@ -11,6 +11,7 @@
 <TITLE> We all can do well </TITLE>
 <link rel="stylesheet" type="text/css" href="lottoall.css" />
 <script type="text/javascript" src="jquery-1.11.3.min.js"></script>
+<script type="text/javascript" src="lottodata_frame.js"></script>
 <script type="text/javascript" src="lottodata.js"></script>
 <script type="text/javascript" src="lottoall.js"></script>
 
